Release v2.1.19 - Mac Improvement 2 using jdk 25