@@ -3,7 +3,7 @@ setlocal
 cd /d "%~dp0"
 
 if exist "target\DSE_Final.jar" (
-    start "DSE ERP" javaw --enable-preview -Dfile.encoding=UTF-8 -jar "target\DSE_Final.jar"
+    start "DSE ERP" javaw -Dfile.encoding=UTF-8 -jar "target\DSE_Final.jar"
     exit /b 0
 )
 
