@@ -7,14 +7,13 @@
 
     <groupId>org.example</groupId>
     <artifactId>JavaApp</artifactId>
-    <version>2.1.18</version>
+    <version>2.1.19</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>25</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <javafx.version>21</javafx.version>
+        <javafx.version>25.0.2</javafx.version>
         <poi.version>5.2.5</poi.version>
         <log4j.version>2.20.0</log4j.version>
         <app.name>DSE ERP</app.name>
@@ -186,10 +185,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>21</release>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
 
